@@ -15,27 +15,26 @@ synchronized (lock) {
 
 아래의 코드로 확인해 볼 수 있다.
 
-
 ```java
-public class ThreadPinningSynchronizedTest {
+public class VirtualThreadPinningExample {
 
     private static final Object lock = new Object();
 
     public static void main(String[] args) {
 
-        // Give some time for JFR ready
         giveSomeTimeForJFRInit();
 
         List<Thread> threads = IntStream.range(0, 10)
                 .mapToObj(index -> Thread.ofVirtual().unstarted(() -> {
-                    System.out.printf("BEFORE %d - %s%n", index, Thread.currentThread());
+                    String threadInfo = "BEFORE " + index + " - " + Thread.currentThread() + "\n";
 
                     synchronized (lock) {
                         // 시간은 오래 걸리지만 blocking은 없는 사례
                         getFibonacci(40);
                     }
 
-                    System.out.printf("AFTER  %d - %s%n", index, Thread.currentThread());
+                    threadInfo += "AFTER  " + index + " - " + Thread.currentThread() + "\n";
+                    System.out.println(threadInfo);
                 }))
                 .toList();
 
@@ -70,527 +69,459 @@ public class ThreadPinningSynchronizedTest {
 
 ```
 
-Java 21에서 실행하면 다음과 같이 출력된다.
+Java 21에서 `java VirtualThreadPinningExample.java` 명령으로 실행하면 다음과 같이 출력된다.
 
 ```
-BEFORE 0 - VirtualThread[#31]/runnable@ForkJoinPool-1-worker-1
-BEFORE 1 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-3
-BEFORE 2 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-4
-BEFORE 3 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-6
-BEFORE 4 - VirtualThread[#35]/runnable@ForkJoinPool-1-worker-5
-BEFORE 6 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-2
-BEFORE 5 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-7
+BEFORE 6 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-7
+AFTER  6 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-7
+
+BEFORE 7 - VirtualThread[#38]/runnable@ForkJoinPool-1-worker-8
+AFTER  7 - VirtualThread[#38]/runnable@ForkJoinPool-1-worker-8
+
 BEFORE 8 - VirtualThread[#39]/runnable@ForkJoinPool-1-worker-9
-BEFORE 9 - VirtualThread[#40]/runnable@ForkJoinPool-1-worker-8
-BEFORE 7 - VirtualThread[#38]/runnable@ForkJoinPool-1-worker-10
-AFTER  0 - VirtualThread[#31]/runnable@ForkJoinPool-1-worker-1
-AFTER  7 - VirtualThread[#38]/runnable@ForkJoinPool-1-worker-10
-AFTER  9 - VirtualThread[#40]/runnable@ForkJoinPool-1-worker-8
 AFTER  8 - VirtualThread[#39]/runnable@ForkJoinPool-1-worker-9
-AFTER  5 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-7
-AFTER  6 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-2
+
+BEFORE 9 - VirtualThread[#40]/runnable@ForkJoinPool-1-worker-10
+AFTER  9 - VirtualThread[#40]/runnable@ForkJoinPool-1-worker-10
+
+BEFORE 0 - VirtualThread[#31]/runnable@ForkJoinPool-1-worker-1
+AFTER  0 - VirtualThread[#31]/runnable@ForkJoinPool-1-worker-1
+
+BEFORE 3 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-4
+AFTER  3 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-4
+
+BEFORE 2 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-3
+AFTER  2 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-3
+
+BEFORE 1 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-2
+AFTER  1 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-2
+
+BEFORE 5 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-6
+AFTER  5 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-6
+
+BEFORE 4 - VirtualThread[#35]/runnable@ForkJoinPool-1-worker-5
 AFTER  4 - VirtualThread[#35]/runnable@ForkJoinPool-1-worker-5
-AFTER  3 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-6
-AFTER  2 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-4
-AFTER  1 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-3
 ```
 
 먼저 출력 내용이 무엇을 뜻하는지 알아보자.
 
-예를 들어, `VirtualThread[#32]/runnable@ForkJoinPool-1-worker-3`의 각 부분이 의미하는 바는 다음과 같다.
+예를 들어, `VirtualThread[#37]/runnable@ForkJoinPool-1-worker-7`의 각 부분이 의미하는 바는 다음과 같다.
 
-- `#32`는 가상 스레드 식별자이고,
+- `#37`는 가상 스레드 식별자이고,
 - `runnable`은 가상 스레드의 상태
 - `ForkJoinPool-1`는 가상 스레드를 캐리어 스레드에 마운트하는 스케줄러
-- `worker-3`은 가상 스레드가 마운트 된 캐리어 스레드
+- `worker-7`은 가상 스레드가 마운트 된 캐리어 스레드
 
-`VirtualThread[#32]/runnable@ForkJoinPool-1-worker-3`는  
-`32번 가상 스레드가 ForkJoinPool-1 스케줄러에 의해 worker-3 캐리어 스레드에 마운트 되어 실행 중인 상태`를 나타낸다.
+`VirtualThread[#37]/runnable@ForkJoinPool-1-worker-7`는  
+`37번 가상 스레드가 ForkJoinPool-1 스케줄러에 의해 worker-7 캐리어 스레드에 마운트 되어 실행 중인 상태`를 나타낸다.
 
 위 결과를 다시 살펴보면 가상 스레드별 BEFORE/AFTER 값이 모두 동일한 것을 확인할 수 있다.  
-이 말은 곧 가상 스레드가 `synchronized` 블록에 들어가기 전에 마운트 돼 있던 캐리어 스레드와 `synchronized` 블록을 실행하고 빠져나온 후에 마운트 돼 있는 캐리어 스레드가 동일하다는 뜻이다.
+즉, 가상 스레드가 `synchronized` 블록에 들어가기 전에 마운트 돼 있던 캐리어 스레드와 `synchronized` 블록을 실행하고 빠져나온 후에 마운트 돼 있는 캐리어 스레드가 동일하다는 뜻이다. 10개만으로 부족해 보인다면 수를 늘려서 확인해도 결과는 마찬가지다.
 
-따라서 다음과 같이 유추할 수 있다.
+결국 다음과 같이 결론 지을 수 있다.
+
+:::info
+**가상 스레드는 `synchronized`의 락 획득을 기다리는 동안 언마운트 되지 못하고 캐리어 스레드를 점유하며 자원을 낭비한다.**
+:::
+
+한편, 가상 스레드와 `synchronized` 얘기가 나오면 꼭 함께 따라나오는 용어가 있다.  
+바로 **가상 스레드 고정(pinning)** 이다.
+
+그렇다면 위와 같이 `synchronized`가 사용된 상황에서 `synchronized` 블록 전/후로 가상 스레드가 동일한 캐리어 스레드에 마운트 돼 있었다면 고정이 발생한 것일까? 발생한 것이라면 언제 고정이 되는 걸까?
+
+
+## 고정 발생 시점
+
+JEP 444의 [Executing virtual threads](https://openjdk.org/jeps/444#Executing-virtual-threads) 섹션 중간 정도에 보면 다음과 같이 나와있다.
+
+>There are two scenarios in which a virtual thread cannot be unmounted during blocking operations because it is pinned to its carrier:
+>
+>    1. When it executes code inside a synchronized block or method, or
+>    2. When it executes a native method or a foreign function.
+
+native 메서드나 foreign 함수는 잠시 제쳐두고 `synchronized` 부분만 살펴보면,  
+**`synchronized` 블록이나 메서드 내부의 코드를 실행할 때**라고 설명하고 있다.
+
+따라서 다음과 같이 정리할 수 있다.
+
+:::info
+**가상 스레드는 `sychronized` 블록이나 메서드에 진입할 때 또는 진입한 직후에 고정 된다.**
+:::
+
+또한 다음 사실에도 유의해야 한다.
+
+:::warning
+**가상 스레드가 `synchronized`의 락 획득을 기다리는 동안 언마운트 되지 못하는 것은 `synchronized` 블록 진입 전에 해당하므로 가상 스레드 고정과는 무관하다.**
+:::
+
+## 가상 스레드 고정 문제 진단
+
+앞서 살펴본 JEP 444의 pin 관련 내용 바로 다음에 다음과 같은 문장이 나온다.
+
+>Pinning does not make an application incorrect, but it might hinder its scalability.
+>
+>고정이 발생한다고 해서 애플리케이션이 잘못 동작하고 있다는 뜻은 아니다. 하지만 고정이 발생하면 확장성을 저해할 수도 있다.
+
+즉, 고정 발생 자체가 문제는 아니다. 그래서 JDK에서도 **가상 스레드 고정 자체를 검출하는 도구가 아니라 가상 스레드 고정 때문에 발생하는 문제를 검출하는 진단 도구를 제공한다.**
+
+### `-Djdk.tracePinnedThreads=full`
+
+다음과 같이 `-Djdk.tracePinnedThreads=full`를 사용해서 예제를 실행해보자.
 
 ```
-`synchronized`를 만나면 가상 스레드 고정(pinning) 현상이 생긴다는데,  
-역시나 고정되니까 `synchronized` 블록 진입 전과 후의 가상스레드/캐리어스레드 정보가 동일하게 유지되는구나.
+java -Djdk.tracePinnedThreads=full VirtualThreadPinningExample.java
 ```
 
-과연 그럴까?
+출력 결과에 별다른 변화가 없을 것이다.
+
+`synchronized` 블록에 진입하면서 고정이 발생하지만, 그로 인한 문제가 없기 때문에 별다른 변화가 없는 것이다.
+
+이제 고정에 의한 문제가 발생하도록 예제 소스를 수정해서 다시 실행 해보자.
+
+```java
+                    synchronized (lock) {
+                        // 시간은 오래 걸리지만 blocking은 없는 사례
+                        // getFibonacci(40);
+                        try {
+                            Thread.sleep(50);
+                        } catch (InterruptedException e) {
+                            throw new RuntimeException(e);
+                        }
+                    }
+```
+
+피보나치 메서드 대신에 블로킹을 유발하는 `Thread.sleep(50)`을 호출한다.  
+이렇게 되면 `synchronized` 블록에 들어오면서 가상 스레드가 고정되고,  
+그 이후 `Thread.sleep(50)`을 호출하면서 블로킹 되어도 언마운트 되지 못하고 캐리어 스레드를 점유하면서 자원을 낭비하는 문제가 발생한다.
+
+다시 `-Djdk.tracePinnedThreads=full` 플래그를 지정하고 실행하면 다음과 같이 눈에 띄는 변화가 나타난다.
+
+```
+java -Djdk.tracePinnedThreads=full VirtualThreadPinningExample.java
 
 
-## blocking이 없으면 pinning도 없다
+VirtualThread[#28]/runnable@ForkJoinPool-1-worker-1 reason:MONITOR
+    java.base/java.lang.VirtualThread$VThreadContinuation.onPinned(VirtualThread.java:199)
+    java.base/jdk.internal.vm.Continuation.onPinned0(Continuation.java:393)
+    java.base/java.lang.VirtualThread.parkNanos(VirtualThread.java:635)
+    java.base/java.lang.VirtualThread.sleepNanos(VirtualThread.java:807)
+    java.base/java.lang.Thread.sleep(Thread.java:507)
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(VirtualThreadPinningExample.java:23) <== monitors:1
+    java.base/java.lang.VirtualThread.run(VirtualThread.java:329)
+BEFORE 0 - VirtualThread[#28]/runnable@ForkJoinPool-1-worker-1
+AFTER  0 - VirtualThread[#28]/runnable@ForkJoinPool-1-worker-1
 
-BEFORE/AFTER 가 동일하게 나오는 이유가 정말로 고정 현상 때문인지 확인해보자.
+BEFORE 1 - VirtualThread[#29]/runnable@ForkJoinPool-1-worker-2
+AFTER  1 - VirtualThread[#29]/runnable@ForkJoinPool-1-worker-2
 
-JFR(JDK Flight Recorder)를 사용하면 [가상 스레드의 네 가지 이벤트](https://docs.oracle.com/en/java/javase/21/core/virtual-threads.html#GUID-F24A6627-4599-4FEF-B17F-DF35EBD34F7B)를 발생시키고 추적할 수 있다.
+BEFORE 3 - VirtualThread[#31]/runnable@ForkJoinPool-1-worker-4
+AFTER  3 - VirtualThread[#31]/runnable@ForkJoinPool-1-worker-4
+
+BEFORE 7 - VirtualThread[#35]/runnable@ForkJoinPool-1-worker-8
+AFTER  7 - VirtualThread[#35]/runnable@ForkJoinPool-1-worker-8
+
+BEFORE 8 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-9
+AFTER  8 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-9
+
+BEFORE 6 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-7
+AFTER  6 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-7
+
+BEFORE 2 - VirtualThread[#30]/runnable@ForkJoinPool-1-worker-3
+AFTER  2 - VirtualThread[#30]/runnable@ForkJoinPool-1-worker-3
+
+BEFORE 5 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-6
+AFTER  5 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-6
+
+BEFORE 9 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-10
+AFTER  9 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-10
+
+BEFORE 4 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-5
+AFTER  4 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-5
+```
+
+이번에는 다음 내용이 추가로 출력되었다.
+
+```
+VirtualThread[#28]/runnable@ForkJoinPool-1-worker-1 reason:MONITOR
+    java.base/java.lang.VirtualThread$VThreadContinuation.onPinned(VirtualThread.java:199)
+    java.base/jdk.internal.vm.Continuation.onPinned0(Continuation.java:393)
+    java.base/java.lang.VirtualThread.parkNanos(VirtualThread.java:635)
+    java.base/java.lang.VirtualThread.sleepNanos(VirtualThread.java:807)
+    java.base/java.lang.Thread.sleep(Thread.java:507)
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(VirtualThreadPinningExample.java:23) <== monitors:1
+    java.base/java.lang.VirtualThread.run(VirtualThread.java:329)
+```
+
+28번 가상 스레드가 `Thread.sleep()`을 호출하면서 `parkNanos()`를 호출하고 언마운트를 시도하지만,  
+`synchronized` 블록의 락(MONITOR)를 가지고 `synchronized` 블록에 진입한 상태, 즉 이미 고정돼 있으므로 언마운트 될 수 없는 상황을 보여주고 있다.
+
+그런데 이상한 점이 하나 있다. 
+
+고정은 10개의 스레드 모두에서 발생하므로 위 로그도 10번 출력돼야 할 것 같은데 왜 1번만 출력되는 걸까?  
+혹시 고정이 1번만 발생한 것은 아닐까?
+
+### JFR(JDK Flight Recorder)
+
+JEP 444에서 [가상 스레드 관련해서 네 가지 JFR 이벤트가 추가](https://openjdk.org/jeps/444#JDK-Flight-Recorder-JFR)되었다.
 
 - VirtualThreadStart
 - VirtualThreadEnd
 - VirtualThreadPinned
 - VirtualThreadSubmitFailed
 
-먼저 JFR이 네 가지 이벤트 모두를 발생시키도록 설정하는 VThreadEvents.jfc 파일을 작성한다.
+이 중에서 현재 관심사인 VirtualThreadPinned에 대한 설명만 살펴보자.
 
-```xml
-<?xml version="1.0" encoding="UTF-8"?>
-<configuration version="2.0" label="Virtual Thread Events"
-    description="JFR configuration to record virtual thread events">
-  <event name="jdk.VirtualThreadStart">
-    <setting name="enabled">true</setting>
-  </event>
-  <event name="jdk.VirtualThreadEnd">
-    <setting name="enabled">true</setting>
-  </event>
-  <event name="jdk.VirtualThreadPinned">
-    <setting name="enabled">true</setting>
-  </event>
-  <event name="jdk.VirtualThreadSubmitFailed">
-    <setting name="enabled">true</setting>
-  </event>
-</configuration>
-```
+>jdk.VirtualThreadPinned indicates that a virtual thread was parked while pinned, i.e., without releasing its platform thread (see above). This event is enabled by default, with a threshold of 20ms.
+>
+>jdk.VirtualThreadPinned는 가상 스레드가 고정된 상태에서 park 되었음을, 즉 가상 스레드가 플랫폼 스레드를 놓아주지 못하고 점유하고 있음을 나타낸다. 이 이벤트는 기본으로 활성화 되며 임계값은 20ms이다.
 
-그리고 다음 명령으로 `VThreadEvents.jfc` 파일을 지정해서 실행하면 `recording-sync-fibo-21.jfr` 파일에 가상 스레드 이벤트 로그가 기록된다.
+즉, 원래 park 되면 플랫폼 스레드(캐리어 스레드)를 놓아줘야 하지만 고정돼 있기 때문에 놓아주지 못하고 20ms 이상 점유하면 jdk.VirtualThreadPinned 이벤트가 발생한다는 얘기다.
+
+이제 JFR을 사용해서 가상 스레드 고정으로 인한 문제를 진단해보자.
+
+다음 명령으로 `recording-sync-sleep-21.jfr` 파일에 가상 스레드 관련 기록을 남길 수 있다.
 
 ```
-> java -XX:StartFlightRecording=filename=recording-sync-fibo-21.jfr,settings=VThreadEvents.jfc ThreadPinningSynchronizedTest.java
+java -Djdk.tracePinnedThreads=full -XX:StartFlightRecording=filename=recording-sync-sleep-21.jfr VirtualThreadPinningExample.java
 ```
 
-실행 결과는 다음과 같다. 앞서 살펴본 것과 마찬가지로 가상 스레드별 BEFORE/AFTER 가 모두 동일하다.
+실행 후 다음 명령으로 jfr 파일에서 jdk.VirtualThreadPinned 이벤트 내용을 출력할 수 있다.
 
 ```
-[0.283s][info][jfr,startup] Started recording 1. No limit specified, using maxsize=250MB as default.
-[0.283s][info][jfr,startup] 
-[0.283s][info][jfr,startup] Use jcmd 14851 JFR.dump name=1 to copy recording data to file.
-BEFORE 1 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-2
-BEFORE 0 - VirtualThread[#31]/runnable@ForkJoinPool-1-worker-6
-BEFORE 2 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-3
-BEFORE 3 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-7
-BEFORE 4 - VirtualThread[#35]/runnable@ForkJoinPool-1-worker-5
-BEFORE 5 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-4
-BEFORE 6 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-1
-BEFORE 8 - VirtualThread[#39]/runnable@ForkJoinPool-1-worker-8
-BEFORE 9 - VirtualThread[#40]/runnable@ForkJoinPool-1-worker-10
-BEFORE 7 - VirtualThread[#38]/runnable@ForkJoinPool-1-worker-9
-AFTER  1 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-2
-AFTER  7 - VirtualThread[#38]/runnable@ForkJoinPool-1-worker-9
-AFTER  9 - VirtualThread[#40]/runnable@ForkJoinPool-1-worker-10
-AFTER  8 - VirtualThread[#39]/runnable@ForkJoinPool-1-worker-8
-AFTER  6 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-1
-AFTER  5 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-4
-AFTER  4 - VirtualThread[#35]/runnable@ForkJoinPool-1-worker-5
-AFTER  3 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-7
-AFTER  2 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-3
-AFTER  0 - VirtualThread[#31]/runnable@ForkJoinPool-1-worker-6
-```
+jfr print --events jdk.VirtualThreadPinned recording-sync-sleep-21.jfr
 
-이제 다음 명령으로 JFR이 기록한 가상 스레드 이벤트 로그를 살펴보자.
 
-```
-> jfr print --events jdk.VirtualThreadStart,jdk.VirtualThreadEnd,jdk.VirtualThreadPinned,jdk.VirtualThreadSubmitFailed recording-sync-fibo-21.jfr
-
-jdk.VirtualThreadStart {
-  startTime = 14:08:44.206 (2026-01-02)
-  javaThreadId = 31
-  eventThread = "" (javaThreadId = 31, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:08:44.206 (2026-01-02)
-  javaThreadId = 32
-  eventThread = "" (javaThreadId = 32, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:08:44.206 (2026-01-02)
-  javaThreadId = 33
-  eventThread = "" (javaThreadId = 33, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:08:44.206 (2026-01-02)
-  javaThreadId = 34
-  eventThread = "" (javaThreadId = 34, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:08:44.207 (2026-01-02)
-  javaThreadId = 35
-  eventThread = "" (javaThreadId = 35, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:08:44.207 (2026-01-02)
-  javaThreadId = 36
+jdk.VirtualThreadPinned {
+  startTime = 12:45:59.596 (2026-01-03)
+  duration = 45.0 ms
   eventThread = "" (javaThreadId = 36, virtual)
+  stackTrace = [
+    java.lang.VirtualThread.parkOnCarrierThread(boolean, long) line: 689
+    java.lang.VirtualThread.parkNanos(long) line: 648
+    java.lang.VirtualThread.sleepNanos(long) line: 807
+    java.lang.Thread.sleep(long) line: 507
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(int) line: 23
+    ...
+  ]
 }
 
-jdk.VirtualThreadStart {
-  startTime = 14:08:44.207 (2026-01-02)
-  javaThreadId = 37
-  eventThread = "" (javaThreadId = 37, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:08:44.207 (2026-01-02)
-  javaThreadId = 39
-  eventThread = "" (javaThreadId = 39, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:08:44.207 (2026-01-02)
-  javaThreadId = 40
-  eventThread = "" (javaThreadId = 40, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:08:44.207 (2026-01-02)
-  javaThreadId = 38
-  eventThread = "" (javaThreadId = 38, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:08:44.533 (2026-01-02)
-  javaThreadId = 32
-  eventThread = "" (javaThreadId = 32, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:08:45.160 (2026-01-02)
-  javaThreadId = 38
-  eventThread = "" (javaThreadId = 38, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:08:45.489 (2026-01-02)
-  javaThreadId = 40
-  eventThread = "" (javaThreadId = 40, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:08:45.796 (2026-01-02)
-  javaThreadId = 39
-  eventThread = "" (javaThreadId = 39, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:08:46.104 (2026-01-02)
-  javaThreadId = 37
-  eventThread = "" (javaThreadId = 37, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:08:46.407 (2026-01-02)
-  javaThreadId = 36
-  eventThread = "" (javaThreadId = 36, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:08:46.707 (2026-01-02)
-  javaThreadId = 35
-  eventThread = "" (javaThreadId = 35, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:08:47.008 (2026-01-02)
-  javaThreadId = 34
+jdk.VirtualThreadPinned {
+  startTime = 12:45:59.642 (2026-01-03)
+  duration = 52.7 ms
   eventThread = "" (javaThreadId = 34, virtual)
+  stackTrace = [
+    java.lang.VirtualThread.parkOnCarrierThread(boolean, long) line: 689
+    java.lang.VirtualThread.parkNanos(long) line: 648
+    java.lang.VirtualThread.sleepNanos(long) line: 807
+    java.lang.Thread.sleep(long) line: 507
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(int) line: 23
+    ...
+  ]
 }
 
-jdk.VirtualThreadEnd {
-  startTime = 14:08:47.309 (2026-01-02)
-  javaThreadId = 33
+jdk.VirtualThreadPinned {
+  startTime = 12:45:59.695 (2026-01-03)
+  duration = 54.7 ms
   eventThread = "" (javaThreadId = 33, virtual)
+  stackTrace = [
+    java.lang.VirtualThread.parkOnCarrierThread(boolean, long) line: 689
+    java.lang.VirtualThread.parkNanos(long) line: 648
+    java.lang.VirtualThread.sleepNanos(long) line: 807
+    java.lang.Thread.sleep(long) line: 507
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(int) line: 23
+    ...
+  ]
 }
 
-jdk.VirtualThreadEnd {
-  startTime = 14:08:47.607 (2026-01-02)
-  javaThreadId = 31
-  eventThread = "" (javaThreadId = 31, virtual)
+jdk.VirtualThreadPinned {
+  startTime = 12:45:59.750 (2026-01-03)
+  duration = 51.1 ms
+  eventThread = "" (javaThreadId = 38, virtual)
+  stackTrace = [
+    java.lang.VirtualThread.parkOnCarrierThread(boolean, long) line: 689
+    java.lang.VirtualThread.parkNanos(long) line: 648
+    java.lang.VirtualThread.sleepNanos(long) line: 807
+    java.lang.Thread.sleep(long) line: 507
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(int) line: 23
+    ...
+  ]
 }
 
+jdk.VirtualThreadPinned {
+  startTime = 12:45:59.801 (2026-01-03)
+  duration = 56.9 ms
+  eventThread = "" (javaThreadId = 35, virtual)
+  stackTrace = [
+    java.lang.VirtualThread.parkOnCarrierThread(boolean, long) line: 689
+    java.lang.VirtualThread.parkNanos(long) line: 648
+    java.lang.VirtualThread.sleepNanos(long) line: 807
+    java.lang.Thread.sleep(long) line: 507
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(int) line: 23
+    ...
+  ]
+}
+
+jdk.VirtualThreadPinned {
+  startTime = 12:45:59.858 (2026-01-03)
+  duration = 56.2 ms
+  eventThread = "" (javaThreadId = 39, virtual)
+  stackTrace = [
+    java.lang.VirtualThread.parkOnCarrierThread(boolean, long) line: 689
+    java.lang.VirtualThread.parkNanos(long) line: 648
+    java.lang.VirtualThread.sleepNanos(long) line: 807
+    java.lang.Thread.sleep(long) line: 507
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(int) line: 23
+    ...
+  ]
+}
+
+jdk.VirtualThreadPinned {
+  startTime = 12:45:59.915 (2026-01-03)
+  duration = 51.7 ms
+  eventThread = "" (javaThreadId = 32, virtual)
+  stackTrace = [
+    java.lang.VirtualThread.parkOnCarrierThread(boolean, long) line: 689
+    java.lang.VirtualThread.parkNanos(long) line: 648
+    java.lang.VirtualThread.sleepNanos(long) line: 807
+    java.lang.Thread.sleep(long) line: 507
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(int) line: 23
+    ...
+  ]
+}
+
+jdk.VirtualThreadPinned {
+  startTime = 12:45:59.969 (2026-01-03)
+  duration = 61.3 ms
+  eventThread = "" (javaThreadId = 41, virtual)
+  stackTrace = [
+    java.lang.VirtualThread.parkOnCarrierThread(boolean, long) line: 689
+    java.lang.VirtualThread.parkNanos(long) line: 648
+    java.lang.VirtualThread.sleepNanos(long) line: 807
+    java.lang.Thread.sleep(long) line: 507
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(int) line: 23
+    ...
+  ]
+}
+
+jdk.VirtualThreadPinned {
+  startTime = 12:46:00.032 (2026-01-03)
+  duration = 53.8 ms
+  eventThread = "" (javaThreadId = 37, virtual)
+  stackTrace = [
+    java.lang.VirtualThread.parkOnCarrierThread(boolean, long) line: 689
+    java.lang.VirtualThread.parkNanos(long) line: 648
+    java.lang.VirtualThread.sleepNanos(long) line: 807
+    java.lang.Thread.sleep(long) line: 507
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(int) line: 23
+    ...
+  ]
+}
+
+jdk.VirtualThreadPinned {
+  startTime = 12:46:00.087 (2026-01-03)
+  duration = 54.6 ms
+  eventThread = "" (javaThreadId = 40, virtual)
+  stackTrace = [
+    java.lang.VirtualThread.parkOnCarrierThread(boolean, long) line: 689
+    java.lang.VirtualThread.parkNanos(long) line: 648
+    java.lang.VirtualThread.sleepNanos(long) line: 807
+    java.lang.Thread.sleep(long) line: 507
+    io.homoefficio.scratchpad.virtualthread.pinning.VirtualThreadPinningExample.lambda$main$0(int) line: 23
+    ...
+  ]
+}
 ```
 
-`VirtualThreadStart`와 `VirtualThreadEnd`만 있을 뿐, **고정 현상에 따라 발생하는 `VirtualThreadPinned`는 하나도 없다.**
+`jdk.VirtualThreadPinned` 이벤트가 정확히 10번 표시된다. 따라서 고정은 1번이 아니라 10번 발생했다는 사실을 알 수 있다.  
 
-즉, **고정 현상이 발생하지 않았음을 의미한다.**
+하지만, **'고정이 10번 발생했다'는 해석은 정확하지 않다**는 점에 유의하자.
 
-`synchronized` 블록이 분명히 있는데도 왜 고정 현상이 발생하지 않았을까?
+고정이 10번 발생한 것은 맞지만, 앞서 `jdk.VirtualThreadPinned`의 설명에서 살펴본 것처럼 **고정으로 인해 캐리어 스레드를 비효율적으로 점유하는 문제가 10번 발생했다**라고 해석해야 정확하다.
 
-이유는 **`synchronized` 블록 내부의 코드에 blocking 연산이 없기 때문이다.**
+그렇다면 고정이 되어도 그로 인해 캐리어 스레드를 비효율적으로 점유하는 문제가 발생하지 않으면 `jdk.VirtualThreadPinned` 이벤트는 발생하지 않는다는 얘긴가?
 
-`synchronized` 블록 내부를 다음과 같이 blocking 연산인 Thread.sleep()을 사용하도록 변경하고, 
+이를 확인하기 위해 다시 `Thread.sleep()` 대신에, 비효율적 스레드 점유가 없는 피보나치 수 계산으로 되돌려서 JFR 이벤트가 어떻게 기록되는지 살펴보자.
 
 ```java
                     synchronized (lock) {
-                        try {
-                            Thread.sleep(50);
-                        } catch (InterruptedException e) {
-                            Thread.currentThread().interrupt();
-                        }
+                        // 시간은 오래 걸리지만 blocking은 없는 사례
+                        getFibonacci(40);
+                        //try {
+                        //    Thread.sleep(50);
+                        //} catch (InterruptedException e) {
+                        //    throw new RuntimeException(e);
+                        //}
                     }
 ```
 
-다시 JFR 과 함께 실행해서 확인 해보자. 가상 스레드별 BEFORE/AFTER는 아까와 마찬가지로 동일하다.
+이번엔 `recording-sync-fibo-21.jfr` 파일에 기록한다.
 
 ```
-> java -XX:StartFlightRecording=filename=recording-sync-sleep-21.jfr,settings=VThreadEvents.jfc ThreadPinningSynchronizedTest.java
+java -Djdk.tracePinnedThreads=full -XX:StartFlightRecording=filename=recording-sync-fibo-21.jfr VirtualThreadPinningExample.java
 
-[0.333s][info][jfr,startup] Started recording 1. No limit specified, using maxsize=250MB as default.
-[0.333s][info][jfr,startup] 
-[0.333s][info][jfr,startup] Use jcmd 23069 JFR.dump name=1 to copy recording data to file.
-BEFORE 0 - VirtualThread[#31]/runnable@ForkJoinPool-1-worker-1
-BEFORE 2 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-9
-BEFORE 1 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-2
-BEFORE 3 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-7
-BEFORE 4 - VirtualThread[#35]/runnable@ForkJoinPool-1-worker-5
-BEFORE 5 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-8
-BEFORE 7 - VirtualThread[#38]/runnable@ForkJoinPool-1-worker-6
-BEFORE 9 - VirtualThread[#40]/runnable@ForkJoinPool-1-worker-10
-BEFORE 6 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-4
-BEFORE 8 - VirtualThread[#39]/runnable@ForkJoinPool-1-worker-3
-AFTER  0 - VirtualThread[#31]/runnable@ForkJoinPool-1-worker-1
-AFTER  8 - VirtualThread[#39]/runnable@ForkJoinPool-1-worker-3
-AFTER  6 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-4
-AFTER  9 - VirtualThread[#40]/runnable@ForkJoinPool-1-worker-10
-AFTER  7 - VirtualThread[#38]/runnable@ForkJoinPool-1-worker-6
-AFTER  5 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-8
-AFTER  4 - VirtualThread[#35]/runnable@ForkJoinPool-1-worker-5
-AFTER  3 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-7
-AFTER  1 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-2
-AFTER  2 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-9
+
+[0.208s][info][jfr,startup] Started recording 1. No limit specified, using maxsize=250MB as default.
+[0.208s][info][jfr,startup] 
+[0.208s][info][jfr,startup] Use jcmd 3033 JFR.dump name=1 to copy recording data to file.
+BEFORE 2 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-3
+AFTER  2 - VirtualThread[#34]/runnable@ForkJoinPool-1-worker-3
+
+BEFORE 9 - VirtualThread[#41]/runnable@ForkJoinPool-1-worker-10
+AFTER  9 - VirtualThread[#41]/runnable@ForkJoinPool-1-worker-10
+
+BEFORE 6 - VirtualThread[#38]/runnable@ForkJoinPool-1-worker-7
+AFTER  6 - VirtualThread[#38]/runnable@ForkJoinPool-1-worker-7
+
+BEFORE 0 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-1
+AFTER  0 - VirtualThread[#32]/runnable@ForkJoinPool-1-worker-1
+
+BEFORE 5 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-6
+AFTER  5 - VirtualThread[#37]/runnable@ForkJoinPool-1-worker-6
+
+BEFORE 4 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-5
+AFTER  4 - VirtualThread[#36]/runnable@ForkJoinPool-1-worker-5
+
+BEFORE 7 - VirtualThread[#39]/runnable@ForkJoinPool-1-worker-8
+AFTER  7 - VirtualThread[#39]/runnable@ForkJoinPool-1-worker-8
+
+BEFORE 3 - VirtualThread[#35]/runnable@ForkJoinPool-1-worker-4
+AFTER  3 - VirtualThread[#35]/runnable@ForkJoinPool-1-worker-4
+
+BEFORE 8 - VirtualThread[#40]/runnable@ForkJoinPool-1-worker-9
+AFTER  8 - VirtualThread[#40]/runnable@ForkJoinPool-1-worker-9
+
+BEFORE 1 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-2
+AFTER  1 - VirtualThread[#33]/runnable@ForkJoinPool-1-worker-2
 ```
 
-이제 가상 스레드 이벤트 로그를 확인 해보자.
+jfr 명령으로 출력해보면,
 
 ```
-> jfr print --events jdk.VirtualThreadStart,jdk.VirtualThreadEnd,jdk.VirtualThreadPinned,jdk.VirtualThreadSubmitFailed recording-sync-sleep-21.jfr
-
-jdk.VirtualThreadStart {
-  startTime = 14:31:32.111 (2026-01-02)
-  javaThreadId = 31
-  eventThread = "" (javaThreadId = 31, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:31:32.111 (2026-01-02)
-  javaThreadId = 32
-  eventThread = "" (javaThreadId = 32, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:31:32.111 (2026-01-02)
-  javaThreadId = 33
-  eventThread = "" (javaThreadId = 33, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:31:32.111 (2026-01-02)
-  javaThreadId = 34
-  eventThread = "" (javaThreadId = 34, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:31:32.111 (2026-01-02)
-  javaThreadId = 35
-  eventThread = "" (javaThreadId = 35, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:31:32.111 (2026-01-02)
-  javaThreadId = 36
-  eventThread = "" (javaThreadId = 36, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:31:32.111 (2026-01-02)
-  javaThreadId = 38
-  eventThread = "" (javaThreadId = 38, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:31:32.111 (2026-01-02)
-  javaThreadId = 40
-  eventThread = "" (javaThreadId = 40, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:31:32.111 (2026-01-02)
-  javaThreadId = 37
-  eventThread = "" (javaThreadId = 37, virtual)
-}
-
-jdk.VirtualThreadStart {
-  startTime = 14:31:32.111 (2026-01-02)
-  javaThreadId = 39
-  eventThread = "" (javaThreadId = 39, virtual)
-}
-
-jdk.VirtualThreadPinned {
-  startTime = 14:31:32.123 (2026-01-02)
-  duration = 53.7 ms
-  eventThread = "" (javaThreadId = 31, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:31:32.177 (2026-01-02)
-  javaThreadId = 31
-  eventThread = "" (javaThreadId = 31, virtual)
-}
-
-jdk.VirtualThreadPinned {
-  startTime = 14:31:32.177 (2026-01-02)
-  duration = 51.4 ms
-  eventThread = "" (javaThreadId = 39, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:31:32.229 (2026-01-02)
-  javaThreadId = 39
-  eventThread = "" (javaThreadId = 39, virtual)
-}
-
-jdk.VirtualThreadPinned {
-  startTime = 14:31:32.229 (2026-01-02)
-  duration = 55.0 ms
-  eventThread = "" (javaThreadId = 37, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:31:32.284 (2026-01-02)
-  javaThreadId = 37
-  eventThread = "" (javaThreadId = 37, virtual)
-}
-
-jdk.VirtualThreadPinned {
-  startTime = 14:31:32.284 (2026-01-02)
-  duration = 55.0 ms
-  eventThread = "" (javaThreadId = 40, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:31:32.339 (2026-01-02)
-  javaThreadId = 40
-  eventThread = "" (javaThreadId = 40, virtual)
-}
-
-jdk.VirtualThreadPinned {
-  startTime = 14:31:32.339 (2026-01-02)
-  duration = 50.2 ms
-  eventThread = "" (javaThreadId = 38, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:31:32.389 (2026-01-02)
-  javaThreadId = 38
-  eventThread = "" (javaThreadId = 38, virtual)
-}
-
-jdk.VirtualThreadPinned {
-  startTime = 14:31:32.389 (2026-01-02)
-  duration = 50.8 ms
-  eventThread = "" (javaThreadId = 36, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:31:32.440 (2026-01-02)
-  javaThreadId = 36
-  eventThread = "" (javaThreadId = 36, virtual)
-}
-
-jdk.VirtualThreadPinned {
-  startTime = 14:31:32.440 (2026-01-02)
-  duration = 54.6 ms
-  eventThread = "" (javaThreadId = 35, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:31:32.495 (2026-01-02)
-  javaThreadId = 35
-  eventThread = "" (javaThreadId = 35, virtual)
-}
-
-jdk.VirtualThreadPinned {
-  startTime = 14:31:32.495 (2026-01-02)
-  duration = 54.6 ms
-  eventThread = "" (javaThreadId = 34, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:31:32.549 (2026-01-02)
-  javaThreadId = 34
-  eventThread = "" (javaThreadId = 34, virtual)
-}
-
-jdk.VirtualThreadPinned {
-  startTime = 14:31:32.549 (2026-01-02)
-  duration = 53.4 ms
-  eventThread = "" (javaThreadId = 32, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:31:32.603 (2026-01-02)
-  javaThreadId = 32
-  eventThread = "" (javaThreadId = 32, virtual)
-}
-
-jdk.VirtualThreadPinned {
-  startTime = 14:31:32.603 (2026-01-02)
-  duration = 54.8 ms
-  eventThread = "" (javaThreadId = 33, virtual)
-}
-
-jdk.VirtualThreadEnd {
-  startTime = 14:31:32.658 (2026-01-02)
-  javaThreadId = 33
-  eventThread = "" (javaThreadId = 33, virtual)
-}
+jfr print --events jdk.VirtualThreadPinned recording-sync-fibo-21.jfr
 
 ```
 
-`VirtualThreadPinned`가 10번 발생했음을 확인할 수 있다.  
+아무것도 출력되지 않는다.
 
-즉, `synchronized` 블록 안에서 블로킹 연산을 실행하면 가상 스레드 고정 현상이 발생하고,  
-`synchronized` 블록 안에서 블로킹 연산을 실행하지 않으면 가상 스레드 고정 현상은 발생하지 않는다.
-
-그럼 고정 현상이 발생하지 않았는데도 가상 스레드별 BEFORE/AFTER가 동일하게 나온 이유는 뭘까?
-
-
-## 언마운트 `하지 않은 것`과 언마운트 `될 수 없는 것`
-
-앞서 살펴본 피보나치 수 구하기, Thread.sleep() 두 가지 케이스에서 모두 가상 스레드별 BEFORE/AFTER가 동일하게 유지됐다.
-
-피보나치 수 구하기에는 블로킹 연산이 없다. 그래서 고정도 발생하지 않는다.  
-고정되지 않았는데도 BEFORE/AFTER가 변하지 않는 이유는 언마운트 하지 않는 것이 낫다고 스케줄러가 판단했기 때문이다.
-
-피보나치 수 구하기는 시간은 오래 걸리지만, 그 시간 동안 CPU가 계속 일을 하고 있기 때문에 자원 낭비가 발생하는 것은 아니다. 따라서 자원 낭비를 막는다는 목적으로 언마운트를 할 필요가 없다.  
-그래서 이 케이스는 **언마운트를 `하지 않은 것`** 에 해당한다.
-
-Thread.sleep()은 블로킹 연산이다. 그래서 고정도 발생한다.  
-고정이 발생했기 때문에 언마운트를 하고 싶어도 할 수가 없다.  
-그래서 이 케이스는 **언마운트 `될 수 없는 것`** 에 해당한다.
+즉, `synchronized`의 락을 획득하고 블록에 진입하면서 고정은 됐지만,  
+그 이후 블록 내 코드에서 자원을 낭비하는 문제는 발생하지 않기 때문에 아무런 `jdk.VirtualThreadPinned` 이벤트도 기록되지 않았다.
 
 
 ## 마무리
 
-이로써 다음과 같이 결론 지을 수 있다.
+`synchronized`와 관련한 가상 스레드 이야기는 다음과 같이 정리할 수 있다.
 
 :::info
 - Java 21에서,
 - `synchronized` 블록에 진입하기 전에 락을 획득하기 위해 기다릴 때, 가상 스레드는 캐리어 스레드를 점유한 상태로 기다리면서 자원을 낭비한다.
-    - 가상 스레드 고정 현상이 발생했기 때문에 점유하는 것이 아니고,
+    - 이 때는 가상 스레드가 고정됐기 때문에 점유하는 것이 아니고,
     - `synchronized` 키워드 처리 시 플랫폼 스레드만 락을 획득/보유/반환하는 주체로 작동하도록 되어 있기 때문이다.
-- `synchronized` 블록이 있다고 해서 항상 가상 스레드 고정 현상이 발생하는 것은 아니다.
-    - `synchronized` 관련한 가상 스레드 고정 현상은 `synchronized` 블록 내부에서 발생할 수 있는 현상이다.
-    - `synchronized` 블록 내부에서, 블로킹 연산처럼 `synchronized` 내부가 아니었다면 언마운트를 유발했을 코드를 실행할 때 고정 현상이 발생한다.
-- 언마운트가 발생하지 않았다고 해서 무조건 고정 현상이 발생했다고 볼 수는 없다.
-    - 불필요해서 고정 현상 없이도 **언마운트 하지 않은 것**도 있고, 
-    - 필요해도 고정 현상이 발생해서 **언마운트 될 수 없는 것**도 있다.
+- 고정되는 시점은 `synchronized` 락을 획득해서 블록에 진입할 때 또는 블록에 진입한 직후이다.
+- JEP 444에서 추가된 JFR 이벤트인 `jdk.VirtualThreadPinned`는 이름만 보면 고정이 될 때 발생하는 이벤트 같지만,
+    - 실제로는 고정으로 인해 캐리어 스레드를 비효율적으로 점유할 때 발생한다.
 :::
 
-참고로 글에서는 `synchronized`만 다루었지만, native 메서드 호출 시에도 가상 스레드는 유사한 메커니즘으로 동작한다.
+참고로 글에서는 `synchronized`만 다루었지만, native 메서드에 대해서는 다루지 않았다.
 
 지금까지 알아본 내용은 모두 Java 21 기준이다.
 
@@ -598,9 +529,9 @@ Java 21에서 `synchronized` 관련 자원 낭비는 다음과 같다.
 
 :::warning
 - `synchronized` 블록 진입 전에는
-    - 가상 스레드가 락 획득을 기다리는 중에도 캐리어 스레드를 점유해서 자원을 낭비하고,
+    - 가상 스레드가 락 획득을 기다리는 중에 고정되지 않더라도 캐리어 스레드를 점유해서 자원을 낭비하고,
 - `synchronized` 블록 진입 후에는 
-    - 가상 스레드가 블로킹 연산 실행 시 고정 현상 때문에 언마운트 되지 못하고 캐리어 스레드를 점유한 채 블로킹 연산 완료를 기다리면서 자원을 낭비한다.
+    - 가상 스레드가 고정됐기 때문에 블로킹 연산 실행 시에도 언마운트 되지 못하고 캐리어 스레드를 점유한 채 블로킹 연산 완료를 기다리면서 자원을 낭비한다.
 :::
 
 이런 단점 때문에 Java 21 가상 스레드를 실무에 적용하기엔 현실적으로 무리가 있었다.
@@ -614,8 +545,7 @@ JEP 491 내용 중 `synchronized` 관련 내용을 요약하면 다음과 같다
 >    - `synchronized` 블록 진입 전/후 모두에서 가상 스레드가 캐리어 스레드에 고정될 필요없이 언마운트 되어 자원 낭비를 방지할 수 있게 되었다.
 
 
-
-## 오류 정정
+## 오류 정정 - 1
 
 이 글의 첫 번째 버전은 '`synchronized` 블록의 락 획득을 기다릴 때 가상 스레드가 언마운트 된다'고 완전히 잘못된 결론을 내렸다. ㅠㅜ
 
@@ -624,7 +554,7 @@ JEP 491 내용 중 `synchronized` 관련 내용을 요약하면 다음과 같다
 `synchronized` 블록을 아예 없애고 `MessageFormat.format()`를 사용해서 BEFORE/AFTER를 출력하도록 수정해서 테스트해보면 다음과 같이 가상 스레드별 BEFORE/AFTER가 달라지는 것을 확인할 수 있다.
 
 ```
-java -XX:StartFlightRecording=filename=recording-messageformat-21.jfr,settings=VThreadEvents.jfc ThreadPinningSynchronizedTest.java
+java -XX:StartFlightRecording=filename=recording-messageformat-21.jfr,settings=VThreadEvents.jfc VirtualThreadPinningExample.java
 
 [0.270s][info][jfr,startup] Started recording 1. No limit specified, using maxsize=250MB as default.
 [0.270s][info][jfr,startup] 
@@ -664,3 +594,15 @@ AFTER  9 - VirtualThread[#40]/runnable@ForkJoinPool-1-worker-3
 반대로 `printf` 에서도 `synchronized`의 락 획득 대기 외의 여러 처리 과정이 있을텐데 왜 언마운트 되지 않는 걸까?  
 `printf`는 `MessageFormat.format()` 보다 포맷팅 과정이 더 단순하고 짧은 시간에 처리할 수 있어서, **스케줄링 관점에서 언마운트 하지 않고 그냥 동일한 캐리어 스레드에서 계속 수행하는 것이 더 낫다고 판단해서 언마운트가 발생하지 않은 것**으로 보인다.
 
+
+## 오류 정정 - 2
+
+두 번째 버전에서도 큼지막한 오류가 있었다.
+
+`blocking이 없으면 pinning도 없다`는 완전히 잘못된 해석이다.
+
+`jdk.VirtualThreadPinned`를 이름만 보고 가상 스레드가 고정될 때 발생하는 이벤트라고 오해했기 때문에 발생한 오류였다.
+
+본문에 설명한 것처럼 `jdk.VirtualThreadPinned` 이벤트는 가상 스레드가 고정되어 캐리어 스레드를 비효율적으로 점유하는 문제를 유발할 때 발생한다.
+
+고정은 블로킹이 있든 없든 발생하며, 고정된 상태에서 블로킹이 되고 이로 인해 문제가 될 때에만 `jdk.VirtualThreadPinned` 이벤트가 발생한다.
